--- a/luxury.html
+++ b/luxury.html
@@ -127,7 +127,7 @@
 
     <div class="col-sm-6 col-md-6 col-lg-6 cd">
       <div class="card">
-        <img src="Images/luxury3.jpeg" class="card-img-top" alt="...">
+        <img src="Images/luxury13.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">mh-436</h5>
           <p class="card-text">PKR 33,000</p>
@@ -138,7 +138,7 @@
 
     <div class="col-sm-6 col-md-6 col-lg-6 cd">
       <div class="card">
-        <img src="Images/luxury10.jpeg" class="card-img-top" alt="...">
+        <img src="Images/luxury8.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">mh-437</h5>
           <p class="card-text">PKR 20,000</p>
